# NereusSDR

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE-DUAL-LICENSING  README.md  resources.qrc  setup-deepfilter.ps1
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-template.md
.github/workflows/: ci.yml  codeql.yml  release.yml
captures/: tun-pcap-comparison-notes.md
docs/: MASTER-PLAN.md  project-brief.md
docs/architecture/: 2026-04-12-p1-capture-reference-plan.md  2026-04-12-phase3n-release-pipeline-plan.md  2026-04-15-phase3g10-rx-dsp-flag-design.md  2026-04-16-about-dialog-plan.md  2026-04-16-gpl-compliance-remediation-design.md  2026-04-16-redpitaya-cc-roundrobin-ep2-pacer-plan.md  2026-04-16-sample-rate-wiring-design.md  2026-04-16-sample-rate-wiring-plan.md  2026-04-16-step-attenuator-adc-overload-design.md  2026-04-16-step-attenuator-adc-overload-plan.md  2026-04-17-compliance-verification.md  2026-04-17-gpl-compliance-remediation-plan.md  2026-04-17-gpl-compliance-v020-remediation-plan.md  2026-04-19-phase3o-vax-plan.md  2026-04-19-vax-design.md  2026-04-20-phase3o-subphase12-addendum.md  2026-04-20-phase3o-subphase12-tail-handoff.md  2026-04-27-phase3q-connection-workflow-refactor-plan.md  2026-04-30-shell-chrome-redesign-verification.md  antenna-routing-design.md  antenna-routing-verification.md  band-button-auto-mode-design.md  default-multimeter-row-port-plan.md  linux-gpu-backend.md  meter-parity-audit.md  phase3e-768k-ddc-notes.md  phase3g-rx-epic-a-dbm-scale-strip-plan.md  phase3g-rx-epic-e-waterfall-scrollback-plan.md  phase3g10-handoff.md  phase3g10-rx-dsp-flag-plan.md  phase3g4-advanced-meters-plan.md  phase3g6-debug-handoff.md  phase3g6-oneshot-handoff.md  phase3g6a-plan.md  phase3g8-rx1-display-parity-plan.md  phase3g9-meter-parity-handoff.md  phase3g9-pr-body.md  phase3i-radio-connector-port-design.md  phase3i-radio-connector-port-plan.md  phase3i-verification.md  (+22 more)
docs/attribution/: ASSETS.md  COMPLIANCE-INVENTORY.md  DESKHPSDR-PROVENANCE.md  HOW-TO-PORT.md  README.md  REMEDIATION-LOG.md  REPORTING-OMISSIONS.md  THETIS-PROVENANCE.md  UPSTREAM-SYNC-PROTOCOL.md  WDSP-PROVENANCE.md  aethersdr-contributor-index.md  aethersdr-reconciliation.md  audit-outbound.md  deskhpsdr-author-tags.json  inline-mod-reconciliation.md  second-pass-reconciliation.md  thetis-author-tags.json  thetis-contributor-index-v020-snapshot.md  thetis-contributor-index.md  thetis-inline-mods-index.md
docs/debugging/: alpha-tester-hl2-smoke-test.md  phase3i-smoke-test.md  v0.2.3-alpha-tester-smoketest.md
docs/phase1/: 1A-aethersdr-analysis.md
docs/protocols/: openhpsdr-protocol1-capture-reference.md  openhpsdr-protocol1.md
hal-plugin/: NereusSDRVAX.cpp
packaging/macos/: app-entitlements.plist  hal-entitlements.plist  hal-installer.sh
packaging/third-party-licenses/: README.md  fftw3.txt  qt6.txt  thetis.txt  wdsp.txt
resources/shaders/: waterfall.frag
scripts/: audit-inline-markers.py  audit-wdsp-headers.py  check-new-ports.py  discover-deskhpsdr-author-tags.py  discover-thetis-author-tags.py  fix-multisource-samphire.py  generate-contributor-indexes.py  inject-missed-headers.py  inject-samphire-button-headers.py  list-copyright-holders.py  repair-multisource-headers.py  rewrite-verbatim-headers.py  verify-inline-tag-preservation.py  verify-provenance-sync.py  verify-thetis-headers.py
scripts/git-hooks/: pre-commit
scripts/windows/: installer.nsi
src/: main.cpp
src/core/: AntennaLabels.cpp  AntennaLabels.h  AppSettings.cpp  AppSettings.h  AudioDeviceConfig.cpp  AudioDeviceConfig.h  AudioEngine.cpp  AudioEngine.h  BoardCapabilities.cpp  BoardCapabilities.h  CalibrationController.cpp  CalibrationController.h  ClarityController.cpp  ClarityController.h  DeepFilterFilter.cpp  FFTEngine.cpp  FFTEngine.h  HardwareProfile.cpp  HardwareProfile.h  HpsdrModel.h  IAudioBus.h  IoBoardHl2.cpp  IoBoardHl2.h  LogCategories.cpp  LogCategories.h  MacNRFilter.cpp  MacNRFilter.h  MicProfileManager.cpp  MicProfileManager.h  ModelPaths.cpp  ModelPaths.h  MoxController.cpp  MoxController.h  NbFamily.cpp  NbFamily.h  NoiseFloorEstimator.cpp  NoiseFloorEstimator.h  NoiseFloorTracker.cpp  NoiseFloorTracker.h  P1RadioConnection.cpp  (+33 more)
src/gui/: AboutDialog.cpp  AboutDialog.h  AddCustomRadioDialog.cpp  AddCustomRadioDialog.h  ConnectionPanel.cpp  ConnectionPanel.h  MainWindow.cpp  MainWindow.h  SetupDialog.cpp  SetupDialog.h  SetupPage.cpp  SetupPage.h  (+13 more)
tests/: CMakeLists.txt  TestSandboxInit.cpp  tst_about_dialog.cpp  tst_add_custom_radio_dialog.cpp  tst_alex_controller.cpp  tst_alex_filter_map.cpp  tst_antenna_control_tab.cpp  tst_antenna_labels.cpp  tst_antenna_routing_model.cpp  tst_app_settings_profile.cpp  tst_app_settings_vax_migration.cpp  tst_audio_device_config_roundtrip.cpp  tst_audio_engine_master_mute.cpp  tst_audio_engine_pull_tx_mic.cpp  tst_audio_engine_reset_audio_settings.cpp  tst_audio_engine_route_dispatch.cpp  tst_audio_engine_rx_leak_during_mox.cpp  tst_audio_engine_speakers_live_reconfig.cpp  tst_audio_engine_tx_monitor_block.cpp  tst_audio_engine_tx_monitor_state.cpp  tst_audio_engine_vax_gain.cpp  tst_audio_tx_input_mic_boost_vox_thresh.cpp  tst_audio_tx_input_mic_gain_mirror.cpp  tst_audio_tx_input_page_skeleton.cpp  tst_audio_tx_input_pc_mic_group.cpp  tst_audio_tx_input_radio_mic_group.cpp  tst_audio_vax_page_auto_detect.cpp  tst_band_change_recursion_guard.cpp  tst_band_defaults.cpp  tst_band_from_name.cpp  tst_band_plan_guard_mode_allow_list.cpp  tst_band_plan_guard_mox_rejection.cpp  tst_bandplan_manager.cpp  tst_board_capabilities.cpp  tst_board_capabilities_mic_jack.cpp  tst_calibration_controller.cpp  tst_calibration_tab.cpp  tst_clarity_controller.cpp  tst_clarity_defaults.cpp  tst_connection_panel_saved_radios.cpp  (+178 more)
tests/compliance/: test_cite_versioning.py
tests/data/: p1_baseline_bytes.json  p2_baseline_bytes.json
tests/fakes/: FakeAudioBus.h  P1FakeRadio.cpp  P1FakeRadio.h
tests/fixtures/discovery/: README.md  p1_angelia_reply.hex  p1_hermeslite_reply.hex  p2_saturn_reply.hex
tools/: generate-cross-needle.py
(+349 files in other folders)
